# aud

./: .gitignore  Makefile  cppaudiocapture  listen_thr5.py  main.cpp  thr5_fft_gui.py
gui/: .gitignore  CMakeLists.txt  README.md
gui/include/: app.h
gui/src/: app.cpp  filt.h  main.cpp  notes.h
lib/fftw-3.3.10/: Makefile  config.status  libtool
lib/fftw-3.3.10/api/: Makefile
lib/fftw-3.3.10/dft/: Makefile
lib/fftw-3.3.10/dft/scalar/: Makefile
lib/fftw-3.3.10/dft/scalar/codelets/: Makefile
lib/fftw-3.3.10/dft/simd/: Makefile
lib/fftw-3.3.10/dft/simd/altivec/: Makefile
lib/fftw-3.3.10/dft/simd/avx/: Makefile
lib/fftw-3.3.10/dft/simd/avx-128-fma/: Makefile
lib/fftw-3.3.10/dft/simd/avx2/: Makefile
lib/fftw-3.3.10/dft/simd/avx2-128/: Makefile
lib/fftw-3.3.10/dft/simd/avx512/: Makefile
lib/fftw-3.3.10/dft/simd/common/: Makefile
lib/fftw-3.3.10/dft/simd/generic-simd128/: Makefile
lib/fftw-3.3.10/dft/simd/generic-simd256/: Makefile
lib/fftw-3.3.10/dft/simd/kcvi/: Makefile
lib/fftw-3.3.10/dft/simd/neon/: Makefile
lib/fftw-3.3.10/dft/simd/sse2/: Makefile
lib/fftw-3.3.10/dft/simd/vsx/: Makefile
lib/fftw-3.3.10/doc/: Makefile
lib/fftw-3.3.10/doc/FAQ/: Makefile
lib/fftw-3.3.10/genfft/: Makefile
lib/fftw-3.3.10/kernel/: Makefile
lib/fftw-3.3.10/libbench2/: Makefile
lib/fftw-3.3.10/m4/: Makefile
lib/fftw-3.3.10/mpi/: Makefile
lib/fftw-3.3.10/rdft/: Makefile
lib/fftw-3.3.10/rdft/scalar/: Makefile
lib/fftw-3.3.10/rdft/scalar/r2cb/: Makefile
lib/fftw-3.3.10/rdft/scalar/r2cf/: Makefile
lib/fftw-3.3.10/rdft/scalar/r2r/: Makefile
lib/fftw-3.3.10/rdft/simd/: Makefile
lib/fftw-3.3.10/rdft/simd/altivec/: Makefile
lib/fftw-3.3.10/rdft/simd/avx/: Makefile
lib/fftw-3.3.10/rdft/simd/avx-128-fma/: Makefile
lib/fftw-3.3.10/rdft/simd/avx2-128/: Makefile
lib/fftw-3.3.10/reodft/: Makefile
lib/fftw-3.3.10/simd-support/: Makefile
lib/fftw-3.3.10/support/: Makefile
lib/fftw-3.3.10/tests/: Makefile  bench
lib/fftw-3.3.10/threads/: Makefile
lib/fftw-3.3.10/tools/: Makefile  fftw-wisdom
(+9 files in other folders)
